Wrap FilterList using div element to prevent nested ul elements

--- a/styles/scss/modules/_filters.scss
+++ b/styles/scss/modules/_filters.scss
@@ -82,6 +82,10 @@
 	display: block;
 }
 
+.FilterList ul {
+	margin: 0;
+}
+
 .FilterList li {
 	@include flexbox;
 	background-color: $color-boxed-bg;
